# School-of-AI-EAG-V1

./: .gitignore
1st agentic AI/: INSTALL.md  README.md  api-config.js  background.js  config.js  content.js  manifest.json  popup.css  popup.html  popup.js  setup.html  setup.js  test-api.html
Dark mode chrome plugin/: .gitignore  README.md  content.js  dark-mode.css  generate-icons.js  icon-generator.html  manifest.json  package.json  popup.html  popup.js
Paint Agent/: AgenticMCPUse.py  example2.py  tester.py
Paint Agent/Painter/: AgenticMCPUse.py  example2.py
Screen recorder/: background.js  manifest.json  popup.html  popup.js  styles.css
Session_5/: main.py  pyproject.toml  test.py
Session_5/cot_consistency/: cot_main.py
Session_5/mailer/: README.md  ai_news_articles.docx  ai_news_main.py  ai_news_tools.py  cot_main.py  pyproject.toml  run_output.txt  standalone_email_test.py  test_email.py  test_scraping.py  ~$_news_articles.docx
Session_6/mailer/: README.md  SUCCESS_SUMMARY.md  agent_memory.json  ai_news_articles.docx  ai_news_main.py  ai_news_orchestrator.py  ai_news_tools.py  decision_layer.py  main.py  memory_layer.py  models.py  perception_layer.py  pydantic_example_code.py  pyproject.toml  test_memory.json  test_modular_system.py
Summeriser chrome plugin/: .gitignore  README.md  app.py  content.js  manifest.json  popup.html  popup.js  test_api.py  tester.py
UV tutorial/: UV commands.docx  ~$ commands.docx
asyncio pdb/: async_await_sample.py  codetest.ipynb  logging_sample.py  pdb_sample.py  pydantic_sample.py
(+6 files in other folders)
